- Add become_user & become_password to swagger.yml - Add become_user & become_password to man.rst - Add messages for become_user & become_password - Update cred add and cred edit - Update tests
