# quipucords/api/credential/model.py
@@ -28,6 +28,7 @@ class Credential(models.Model):
     CRED_TYPE_CHOICES = ((NETWORK_CRED_TYPE, NETWORK_CRED_TYPE),
                          (VCENTER_CRED_TYPE, VCENTER_CRED_TYPE),
                          (SATELLITE_CRED_TYPE, SATELLITE_CRED_TYPE))
+    BECOME_USER_DEFAULT = 'root'
     BECOME_SUDO = 'sudo'
     BECOME_SU = 'su'
     BECOME_PBRUN = 'pbrun'
@@ -52,14 +53,15 @@ class Credential(models.Model):
         null=False
     )
     username = models.CharField(max_length=64)
-    become_method = models.CharField(max_length=6,
-                                     choices= BECOME_METHOD_CHOICES,
-                                     null=True
-                                     )
     password = models.CharField(max_length=1024, null=True)
     sudo_password = models.CharField(max_length=1024, null=True)
     ssh_keyfile = models.CharField(max_length=1024, null=True)
     ssh_passphrase = models.CharField(max_length=1024, null=True)
+    become_method = models.CharField(max_length=6,
+                                     choices=BECOME_METHOD_CHOICES,
+                                     null=True)
+    become_user = models.CharField(max_length=64, null=True)
+    become_password = models.CharField(max_length=1024, null=True)
 
     @staticmethod
     def is_encrypted(field):
@@ -80,6 +82,10 @@ class Credential(models.Model):
             self.sudo_password = encrypt_data_as_unicode(self.sudo_password)
         if self.ssh_passphrase and not self.is_encrypted(self.ssh_passphrase):
             self.ssh_passphrase = encrypt_data_as_unicode(self.ssh_passphrase)
+        if self.become_password and not \
+                self.is_encrypted(self.become_password):
+            self.become_password = \
+                encrypt_data_as_unicode(self.become_password)
 
     # pylint: disable=arguments-differ
     def save(self, *args, **kwargs):
